--- a/index.html
+++ b/index.html
@@ -112,10 +112,8 @@
           <h3 class="h5">Registration fee</h3>
           <p>Free</p>
           <h3 class="h5">Banquet</h3>
-          <p>
-            Faculty: 4,000 Japanese yen
-            Student: 2,000 Japanese yen
-          </p>
+          <p>Faculty: 4,000 Japanese yen</p>
+          <p>Student: 2,000 Japanese yen</p>
           <h3 class="h5">Registration process</h3>
           <p>
             Please visit <a href="https://indico.phys.nthu.edu.tw/event/101/" target="_blank">the online registration page</a>.
