--- a/index.html
+++ b/index.html
@@ -130,27 +130,23 @@
           <table class="table table-striped table-sm">
             <tbody>
               <tr>
-                <th scope="row">TBA</th>
-                <td>Deadline to request help for visa issue</td>
+                <th scope="row">December 20, 2023</th>
+                <td>Website online</td>
               </tr>
               <tr>
-                <th scope="row">TBA</th>
-                <td>Deadline for abstract submission</td>
+                <th scope="row">February 02, 2024</th>
+                <td>Deadline of abstract submission for oral presentation</td>
               </tr>
               <tr>
-                <th scope="row">TBA</th>
-                <td>Deadline for registration</td>
+                <th scope="row">February 29, 2024</th>
+                <td>Deadline of registration for poster presentation or sole participation</td>
               </tr>
               <tr>
-                <th scope="row">March 25</th>
+                <th scope="row">March 25, 2024</th>
                 <td>Workshop Opening</td>
               </tr>
               <tr>
-                <th scope="row">TBA</th>
-                <td>Poster Session</td>
-              </tr>
-              <tr>
-                <th scope="row">March 29</th>
+                <th scope="row">March 29, 2024</th>
                 <td>Workshop Closing</td>
               </tr>
             </tbody>
