--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
           <p>
             Please visit <a href="https://indico.phys.nthu.edu.tw/event/101/" target="_blank">the online registration page</a>.
           </p>
+          <p>(Please register the event first before submitting the abstract)</p>
 
           <h2 id="program">Program</h2>
           <p>
@@ -151,6 +152,7 @@
               </tr>
             </tbody>
           </table>
+          <p>(Please register the event first before submitting the abstract)</p>
         </div>
       </div>
     </div>
