--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <p>
             Please visit <a href="https://indico.phys.nthu.edu.tw/event/101/" target="_blank">the online registration page</a>.
           </p>
-          <p>(Please register the event first before submitting the abstract)</p>
+          <p>Please register the event first before submitting the abstract</p>
 
           <h2 id="program">Program</h2>
           <p>
@@ -152,7 +152,8 @@
               </tr>
             </tbody>
           </table>
-          <p>(Please register the event first before submitting the abstract)</p>
+          <p># Submissions not accepted as a talk will automatically be considered as a poster.</p>
+          <p># For participants who require Visa application, please contact us as soon as possible.</p>
         </div>
       </div>
     </div>
