--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
           <h3 class="h5">Registration process</h3>
           <p>
             Please visit <a href="https://indico.phys.nthu.edu.tw/event/101/" target="_blank">the online registration page</a>.
-          </p>
-          <p>Please register the event first before submitting the abstract</p>
+          <br> Please register the event first before submitting the abstract</p>
 
           <h2 id="program">Program</h2>
           <p>
@@ -151,8 +150,8 @@
               </tr>
             </tbody>
           </table>
-          <p># Submissions not accepted as a talk will automatically be considered as a poster.</p>
-          <p># For participants who require Visa application, please contact us as soon as possible.</p>
+          <p># Submissions not accepted as a talk will automatically be considered as a poster.
+          <br># For participants who require Visa application, please contact us as soon as possible.</p>
         </div>
       </div>
     </div>
