--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
           <h2 id="program">Program</h2>
           <p>
-            The full program will be available on <a href="https://indico.phys.nthu.edu.tw/event/101/" target="_blank">our Indico site</a>.
+            TBD.
           </p>
         </div>
 
@@ -145,12 +145,17 @@
                 <td>Workshop Opening</td>
               </tr>
               <tr>
+                <th scope="row">March 27, 2024</th>
+                <td>Oral and poster presentations, banquet</td>
+              </tr>
+              <tr>
                 <th scope="row">March 29, 2024</th>
                 <td>Workshop Closing</td>
               </tr>
             </tbody>
           </table>
           <p># Submissions not accepted as a talk will automatically be considered as a poster.
+          <br># Based on the number of registration, some oral and poster presentations might take place on March 28.
           <br># For participants who require Visa application, please contact us as soon as possible.</p>
         </div>
       </div>
