--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
           <h2 id="speakers">Invited Speakers</h2>
         </div>
         <div class="col-lg-6">Didier Poilblanc <small>(Univ. of Toulouse)</small></div>
+        <div class="col-lg-6">Garnet Kin-Lic Chan <small>(California Institute of Technology)</small></div>
         <div class="col-lg-6">Hiroshi Shinaoka <small>(Saitama Univ.)</small></div>
+        <div class="col-lg-6">Ian McCulloch <small>(Natl. Tsing Hua Univ.)</small></div>
         <div class="col-lg-6">Ji-Yao Chen <small>(Sun Yat-sen Univ.)</small></div>
         <div class="col-lg-6">Keisuke Fujii <small>(Osaka University)</small></div>
         <div class="col-lg-6">Lei Wang <small>(IOP, Chinese Academy of Science)</small></div>
@@ -98,6 +100,7 @@
         <div class="col-lg-6">Naoki Kawashima <small>(ISSP, Univ. of Tokyo)</small></div>
         <div class="col-lg-6">Pochung Chen <small>(Natl. Tsing Hua Univ.)</small></div>
         <div class="col-lg-6">Tao Xiang <small>(IOP, Chinese Academy of Science)</small></div>
+        <div class="col-lg-6">Thomas Ayral <small>(Atos Quantum Lab)</small></div>
         <div class="col-lg-6">Ying-Jer Kao <small>(Natl. Taiwan Univ.)</small></div>
       </div>
     </div>
