--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- Site description -->
   <title>Tensor Network and Quantum Embedding Workshop</title>
-  <meta name="description" content="Tensor Network and Quantum Embedding Workshop">
+  <meta name="description" content="SQAI-NCTS Workshop on Tensor Network and Quantum Embedding">
 
 </head>
 
@@ -100,7 +100,7 @@
         <div class="col-lg-6">Naoki Kawashima <small>(ISSP, Univ. of Tokyo)</small></div>
         <div class="col-lg-6">Pochung Chen <small>(Natl. Tsing Hua Univ.)</small></div>
         <div class="col-lg-6">Tao Xiang <small>(IOP, Chinese Academy of Science)</small></div>
-        <div class="col-lg-6">Thomas Ayral <small>(Atos Quantum Lab)</small></div>
+        <div class="col-lg-6">Thomas Ayral <small>(Eviden Quantum Lab)</small></div>
         <div class="col-lg-6">Ying-Jer Kao <small>(Natl. Taiwan Univ.)</small></div>
       </div>
     </div>
