--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="style.css">
 
   <!-- Site description -->
-  <title>Tensor Network and Quantum Embedding Workshop</title>
+  <title>SQAI-NCTS Workshop on Tensor Network and Quantum Embedding</title>
   <meta name="description" content="SQAI-NCTS Workshop on Tensor Network and Quantum Embedding">
 
 </head>
