--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
                 <td>Website online</td>
               </tr>
               <tr>
-                <th scope="row">February 02, 2024</th>
+                <th scope="row"><s>February 02, 2024</s></th>
+                <th scope="row">February 16, 2024</th>
                 <td>Deadline of abstract submission for oral presentation</td>
               </tr>
               <tr>
