--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
           <p># Submissions not accepted as a talk will automatically be considered as a poster.
           <br># Based on the number of registration, some oral and poster presentations might take place on March 28.
           <br># For participants who require Visa application, please contact us as soon as possible.</p>
+          <br># Note: If your receive any emails offering you hotels or accommodation for the event, e.g. from "Global Travel Experts" please ignore it - this is a well-known scam targeting registrants to Indico events.</p>
         </div>
       </div>
     </div>
