--- a/index.html
+++ b/index.html
@@ -151,13 +151,16 @@
                 <td>Oral and poster presentations, banquet</td>
               </tr>
               <tr>
+                <th scope="row">March 28, 2024</th>
+                <td>Oral presentations</td>
+              </tr>
+              <tr>
                 <th scope="row">March 29, 2024</th>
                 <td>Workshop Closing</td>
               </tr>
             </tbody>
           </table>
           <p># Submissions not accepted as a talk will automatically be considered as a poster.
-          <br># Based on the number of registration, some oral and poster presentations might take place on March 28.
           <br># For participants who require Visa application, please contact us as soon as possible.</p>
           <br><font color="#FF0000">Note: If your receive any emails offering you hotels or accommodation for the event, 
             e.g. from "Global Travel Experts" please ignore it - this is a well-known scam targeting registrants to Indico events.</font></p>
