Add a link to the Indico timetable

--- a/index.html
+++ b/index.html
@@ -122,7 +122,12 @@
 
           <h2 id="program">Program</h2>
           <p>
-            TBD.
+            Tentative timetable is available <a href="https://indico.phys.nthu.edu.tw/event/101/timetable/#all.detailed" target="_blank">here</a>.
+          </p>
+
+          <h2 id="poster">Poster</h2>
+          <p>
+            Download from <a href="img/poster.pdf" target="_blank">here</a>.
           </p>
         </div>
 
@@ -135,7 +140,7 @@
                 <td>Website online</td>
               </tr>
               <tr>
-                <th scope="row"><s>February 02</s>February 16, 2024</s></th>
+                <th scope="row"><s>February 02</s> February 16, 2024</s></th>
                 <td>Deadline of abstract submission for oral presentation</td>
               </tr>
               <tr>
