--- a/index.html
+++ b/index.html
@@ -117,8 +117,9 @@
           <p>Faculty: 4,000 Japanese yen<br>Student: 2,000 Japanese yen</p>
           <h3 class="h5">Registration process</h3>
           <p>
-            Please visit <a href="https://indico.phys.nthu.edu.tw/event/101/" target="_blank">the online registration page</a>.
-          <br> Please register the event first before submitting the abstract</p>
+            <s>Please visit <a href="https://indico.phys.nthu.edu.tw/event/101/" target="_blank">the online registration page</s></a>.
+          <br> <s>Please register the event first before submitting the abstract</s>
+          <br> The registration has been closed. For any further query please contact the organizers.</p>
 
           <h2 id="program">Program</h2>
           <p>
