--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
 
           <h2 id="program">Program</h2>
           <p>
-            Tentative timetable is available <a href="https://indico.phys.nthu.edu.tw/event/101/timetable/#all.detailed" target="_blank">here</a>.
+            Timetable is available <a href="https://indico.phys.nthu.edu.tw/event/101/timetable/#all.detailed" target="_blank">here</a>.
+            <br> Or download the <a href="img/program_final.pdf" target="_blank">PDF</a>.
           </p>
 
           <h2 id="poster">Poster</h2>
