--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
           <p>
             Timetable is available <a href="https://indico.phys.nthu.edu.tw/event/101/timetable/#all.detailed" target="_blank">here</a>.
             <br> Or download the <a href="img/program_final.pdf" target="_blank">PDF</a>.
+            <br> Venue map <a href="img/Venue map.pdf" target="_blank">PDF</a>.
           </p>
 
           <h2 id="poster">Poster</h2>
