--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <br> Venue map <a href="img/Venue map.pdf" target="_blank">PDF</a>.
           </p>
 
-          <h2 id="poster">Poster</h2>
+          <h2 id="poster">Event Poster</h2>
           <p>
             Download from <a href="img/poster.pdf" target="_blank">here</a>.
           </p>
