--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             <a class="nav-link" href="#program">Program</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#venuemap">Venue Map</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
@@ -123,9 +126,14 @@
 
           <h2 id="program">Program</h2>
           <p>
-            Timetable is available <a href="https://indico.phys.nthu.edu.tw/event/101/timetable/#all.detailed" target="_blank">here</a>.
-            <br> Or download the <a href="img/program_final.pdf" target="_blank">PDF</a>.
-            <br> Venue map <a href="img/Venue map.pdf" target="_blank">PDF</a>.
+            Timetable is available <a href="https://indico.phys.nthu.edu.tw/event/101/timetable/#all.detailed" target="_blank">here</a> or download the <a href="img/program_final.pdf" target="_blank">PDF</a>.
+          </p>
+
+          <h2 id="venuemap">Venue Map</h2>
+          <p>
+            The venue information of each day is in this <a href="img/Venue map.pdf" target="_blank">PDF</a>.
+          </p>
+          
           </p>
 
           <h2 id="poster">Event Poster</h2>
