--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#venue">Venue</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#speakers">Invited Speakers</a>
           </li>
           <li class="nav-item">
@@ -39,9 +42,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#program">Program</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#venuemap">Venue Map</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
@@ -78,7 +78,8 @@
             Hongo campus, the University of Tokyo, Tokyo, Japan<br>
             [<a href="https://www.u-tokyo.ac.jp/en/about/access.html" target="_blank"
               class="link-underline link-underline-opacity-0 link-underline-opacity-75-hover">Access and Campus
-              Maps</a>]
+              Maps</a>]<br>
+            The venue information of each day is in this <a href="img/Venue map.pdf" target="_blank">PDF</a>.
           </p>
         </div>
       </div>
@@ -127,11 +128,6 @@
           <h2 id="program">Program</h2>
           <p>
             Timetable is available <a href="https://indico.phys.nthu.edu.tw/event/101/timetable/#all.detailed" target="_blank">here</a> or download the <a href="img/program_final.pdf" target="_blank">PDF</a>.
-          </p>
-
-          <h2 id="venuemap">Venue Map</h2>
-          <p>
-            The venue information of each day is in this <a href="img/Venue map.pdf" target="_blank">PDF</a>.
           </p>
           
           </p>
