--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">TNQE Workshop</a>
+      <a class="navbar-brand" href="#">SQAI-NCTS Workshop</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -253,7 +253,7 @@
   </div>
 
   <footer class="py-2 text-center text-light bg-dark bg-opacity-50">
-    &copy; 2023-2024 TNQE Workshop
+    &copy; 2023-2024 SQAI-NCTS Workshop
   </div>
 
   <!-- Bootstrap JavaScript -->
