Put a delete element to Banquet fee

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
           <h3 class="h5">Registration fee</h3>
           <p>Free</p>
           <h3 class="h5">Banquet</h3>
-          <p>Faculty: 4,000 Japanese yen<br>Student: 2,000 Japanese yen</p>
+          <p><del>Faculty: 4,000 Japanese yen<br>Student: 2,000 Japanese yen</del></p>
           <h3 class="h5">Registration process</h3>
           <p>
-            <s>Please visit <a href="https://indico.phys.nthu.edu.tw/event/101/" target="_blank">the online registration page</s></a>.
-          <br> <s>Please register the event first before submitting the abstract</s>
+            <del>Please visit <a href="https://indico.phys.nthu.edu.tw/event/101/" target="_blank">the online registration page</del></a>.
+          <br> <del>Please register the event first before submitting the abstract</del>
           <br> The registration has been closed. For any further query please contact the organizers.</p>
 
           <h2 id="program">Program</h2>
@@ -147,7 +147,7 @@
                 <td>Website online</td>
               </tr>
               <tr>
-                <th scope="row"><s>February 02</s> February 16, 2024</s></th>
+                <th scope="row"><del>February 02</del> <ins>February 16</ins>, 2024</th>
                 <td>Deadline of abstract submission for oral presentation</td>
               </tr>
               <tr>
