--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
           <br># For participants who require Visa application, please contact us as soon as possible.</p>
           <br><font color="#FF0000">Note: If your receive any emails offering you hotels or accommodation for the event, 
             e.g. from "Global Travel Experts" please ignore it - this is a well-known scam targeting registrants to Indico events.</font></p>
+          <br>The workshop has successfully ended and we appreciate the participation from everyone. The group photo can be found 
+          <a href="Group_photo.jpg" target="_blank">here.</font></p>
         </div>
       </div>
     </div>
